VR: Have testapp DCHECK against GL errors in UI code

Unbinding of frames appears to generate GL errors, on the first frame,
but otherwise, the UI is clean.  Checking for GL errors in the testapp
is a way to sanity check against new UI errors without affecting GPU
scheduling on dev/release Android builds.

BUG=768905
R=vollick

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel;master.tryserver.chromium.linux:linux_vr
Change-Id: I7ba27f20e59f4eb642f129795abb74d66a0894f5
Reviewed-on: https://chromium-review.googlesource.com/1070309
Reviewed-by: Tibor Goldschwendt <tiborg@chromium.org>
Commit-Queue: Christopher Grant <cjgrant@chromium.org>
Cr-Commit-Position: refs/heads/master@{#562962}
Former-commit-id: 986ec296605736231a82ccbe660071c19fb58601